[package]
name = "sled_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sled = "0.34.7"
